[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/components/level/block/plates.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.6, 9.6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.6, 1.6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.6, 9.6 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9.6, 1.6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1.6, 9.6 )

[node name="Block" type="StaticBody2D"]
scale = Vector2( 5, 5 )
collision_layer = 0
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.309804, 0.517647, 0.321569, 1 )
antialiased = true
polygon = PoolVector2Array( 9.6, 9.6, -9.6, 9.6, -9.6, -9.6, 9.6, -9.6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Plates" type="Node2D" parent="."]
visible = false
light_mask = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Plate_Top" type="Area2D" parent="Plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plates/Plate_Top"]
light_mask = 0
position = Vector2( -1.42109e-14, -9.6 )
shape = SubResource( 2 )

[node name="Plate_Right" type="Area2D" parent="Plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plates/Plate_Right"]
light_mask = 0
position = Vector2( 9.6, -1.19209e-07 )
shape = SubResource( 4 )

[node name="Plate_Bottom" type="Area2D" parent="Plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plates/Plate_Bottom"]
light_mask = 0
position = Vector2( 0, 9.6 )
shape = SubResource( 6 )

[node name="Plate_Left" type="Area2D" parent="Plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plates/Plate_Left"]
light_mask = 0
position = Vector2( -9.6, 0 )
shape = SubResource( 8 )
[connection signal="body_entered" from="Plates/Plate_Top" to="." method="_on_Plate_Top_body_entered"]
[connection signal="body_entered" from="Plates/Plate_Right" to="." method="_on_Plate_Right_body_entered"]
[connection signal="body_entered" from="Plates/Plate_Bottom" to="." method="_on_Plate_Bottom_body_entered"]
[connection signal="body_entered" from="Plates/Plate_Left" to="." method="_on_Plate_Left_body_entered"]
